--- a/Assignment 2/home.html
+++ b/Assignment 2/home.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="bg-gray-100">
+
   <!-- Header -->
   <header class="bg-black text-white p-4 flex justify-between items-center">
     <div class="text-lg font-bold">CollabTale</div>
@@ -44,9 +45,8 @@
       <input class="w-full p-2 rounded-full border border-gray-300" placeholder="Search stories..." type="text" />
     </div>
 
-  
-<!-- hreo section -->
-    <div class="flex flex-col md:flex-row items-center mt-12 bg-white p-8 rounded-lg shadow-lg">
+    <!-- Hero Section -->
+    <div class="flex flex-col md:flex-row items-center mt-12 bg-white p-8 rounded-lg shadow-lg max-w-4xl w-full">
       <div class="md:w-1/2">
         <div class="flex items-center mb-4">
           <i class="fas fa-book text-2xl mr-2"></i>
@@ -57,13 +57,16 @@
         <button class="bg-black text-white px-6 py-2 rounded-full">Join now</button>
       </div>
       <div class="md:w-1/2 mt-8 md:mt-0 flex justify-center">
-        <img src="https://storage.googleapis.com/a1aa/image/b7iWMYFduL9R6YSXdgbwbctPfh2voKB6spS_WoMsSMQ.jpg" alt="Collaborating Illustration" class="rounded-full" width="300" height="300">
+        <img src="https://storage.googleapis.com/a1aa/image/b7iWMYFduL9R6YSXdgbwbctPfh2voKB6spS_WoMsSMQ.jpg" alt="Collaborating Illustration" class="rounded-full max-w-xs" width="300" height="300">
       </div>
     </div>
 
-    <div class="container mx-auto mt-8">
+    <!-- Trending Stories -->
+    <div class="container mx-auto mt-8 px-4">
       <h2 class="text-2xl font-bold mb-4">Trending Stories</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+
+        <!-- Story Card -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
           <img src="https://storage.googleapis.com/a1aa/image/LDZnGlI4B7qEtWsoi76k0U2WMhxZgKwEhVJ0aRXqL2c.jpg" alt="Futuristic Dreams" class="w-full h-48 object-cover">
           <div class="p-4">
@@ -90,88 +93,57 @@
             <button class="mt-4 bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">Comment</button>
           </div>
         </div>
+
+        <div class="bg-white rounded-lg shadow-md overflow-hidden">
+          <img src="https://storage.googleapis.com/a1aa/image/cQAMm8arOSCKIDmLqFznYqZrLuHzrnwdwNHitbZk-oQ.jpg" alt="Urban Rhythms" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-lg font-bold">Urban Rhythms</h3>
+            <p class="text-gray-600">by Casey Morgan</p>
+            <button class="mt-4 bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">Comment</button>
+          </div>
+        </div>
+
+        <div class="bg-white rounded-lg shadow-md overflow-hidden">
+          <img src="https://storage.googleapis.com/a1aa/image/cQAMm8arOSCKIDmLqFznYqZrLuHzrnwdwNHitbZk-oQ.jpg" alt="Urban Rhythms" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-lg font-bold">Urban Rhythms</h3>
+            <p class="text-gray-600">by Casey Morgan</p>
+            <button class="mt-4 bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">Comment</button>
+          </div>
+        </div>
+
+        <div class="bg-white rounded-lg shadow-md overflow-hidden">
+          <img src="https://storage.googleapis.com/a1aa/image/cQAMm8arOSCKIDmLqFznYqZrLuHzrnwdwNHitbZk-oQ.jpg" alt="Urban Rhythms" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-lg font-bold">Urban Rhythms</h3>
+            <p class="text-gray-600">by Casey Morgan</p>
+            <button class="mt-4 bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">Comment</button>
+          </div>
+        </div>
+
       </div>
     </div>
 
     
-    <div class="container mx-auto mt-8">
-      <h2 class="text-2xl font-bold mb-4">Trending Stories</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-        <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="https://storage.googleapis.com/a1aa/image/LDZnGlI4B7qEtWsoi76k0U2WMhxZgKwEhVJ0aRXqL2c.jpg" alt="Futuristic Dreams" class="w-full h-48 object-cover">
-          <div class="p-4">
-            <h3 class="text-lg font-bold">Futuristic Dreams</h3>
-            <p class="text-gray-600">by Ben Turner</p>
-            <button class="mt-4 bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">Comment</button>
-          </div>
-        </div>
-
-        <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="https://storage.googleapis.com/a1aa/image/2OvEUEeIMsnaerHN-IZSAWFlwfpZ_CoJZQoEvO8diQs.jpg" alt="Ocean's Tranquility" class="w-full h-48 object-cover">
-          <div class="p-4">
-            <h3 class="text-lg font-bold">Ocean's Tranquility</h3>
-            <p class="text-gray-600">by Jamie Lee</p>
-            <button class="mt-4 bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">Share</button>
-          </div>
-        </div>
-
-        <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <img src="https://storage.googleapis.com/a1aa/image/cQAMm8arOSCKIDmLqFznYqZrLuHzrnwdwNHitbZk-oQ.jpg" alt="Urban Rhythms" class="w-full h-48 object-cover">
-          <div class="p-4">
-            <h3 class="text-lg font-bold">Urban Rhythms</h3>
-            <p class="text-gray-600">by Casey Morgan</p>
-            <button class="mt-4 bg-gray-200 px-4 py-2 rounded hover:bg-gray-300">Comment</button>
-          </div>
-        </div>
-      </div>
-    </div>
- <!-- Blurred overlay for login prompt -->
-<div id="login-overlay" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
-  <div class="bg-white p-8 rounded-lg shadow-lg">
-    <h2 class="text-xl font-bold mb-4">Please Log In</h2>
-    <p class="mb-4">You must log in to continue exploring stories.</p>
-    <a href="login.html" class="bg-black text-white px-4 py-2 rounded">Log In</a>
-  </div>
-</div>
-
 
   </main>
 
+  <!-- Footer -->
   <footer class="bg-black text-white mt-8 p-4">
-    <div class="container mx-auto flex justify-between">
+    <div class="container mx-auto flex flex-col md:flex-row justify-between">
       <p>&copy; 2025 CollabTale. All rights reserved.</p>
-      <nav class="space-x-4">
+      <nav class="space-x-4 mt-4 md:mt-0">
         <a class="hover:underline" href="#">Privacy Policy</a>
         <a class="hover:underline" href="#">Terms of Service</a>
       </nav>
     </div>
   </footer>
+
   <script>
-    //toggle button
     document.getElementById('menu-btn').addEventListener('click', () => {
       document.getElementById('mobile-menu').classList.toggle('hidden');
     });
-
-    // Check if user is logged in
-    const isLoggedIn = localStorage.getItem('userLoggedIn');
-  
-    if (!isLoggedIn) {
-      setTimeout(() => {
-        document.getElementById('login-overlay').classList.remove('hidden');
-      }, 5000);
-    } else {
-      document.getElementById('login-overlay').classList.add('hidden');
-    }
-
-    
-    // Toggle Menu Visibility
-    document.getElementById('menu-btn').addEventListener('click', () => {
-      const menu = document.getElementById('menu');
-      menu.classList.toggle('hidden');
-    });
-
   </script>
-  
 
 </body>
 
