--- a/Assignment 2/story.html
+++ b/Assignment 2/story.html
@@ -14,7 +14,7 @@
          CollabTale
         </div>
         <nav class="space-x-4">
-         <a class="hover:underline" href="index.html">
+         <a class="hover:underline" href="home.html">
           Home
          </a>
          <a class="hover:underline" href="story.html">
