--- a/Assignment 2/story.html
+++ b/Assignment 2/story.html
@@ -13,7 +13,7 @@
   <header class="bg-black text-white p-4 flex justify-between items-center">
     <div class="text-lg font-bold">CollabTale</div>
     <nav class="hidden md:flex space-x-4">
-      <a class="hover:underline" href="index.html">Home</a>
+      <a class="hover:underline" href="home.html">Home</a>
       <a class="hover:underline" href="story.html">Story Creation</a>
       <a class="hover:underline" href="story.html">Story Sharing</a>
       <a href="login.html" class="bg-gray-800 px-4 py-2 rounded hover:bg-gray-700">Log In</a>
@@ -263,6 +263,7 @@
        </div>
       </div>
      </div>
+     
      <!-- Right Column -->
      <div class="w-2/5 p-4 overflow-y-auto">
       <div class="bg-white p-4 rounded shadow mb-4">
